# microk8s-rust-app

./: .gitattributes  .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose-test.yml  docker-compose.test.yml  docker-compose.yml  setup.zsh
.github/: dependabot.yml
.github/workflows/: ci.yml  container-ci.yml  dependabot-auto-merge.yml
helm-chart/: Chart.yaml  k8sgpt-values.yaml  localai-values.yaml  test-certificate.yaml  values.yaml
helm-chart/files/: models.yaml
helm-chart/templates/: NOTES.txt  _helpers.tpl  backend-service.yaml  certificate.yaml  deployment.yaml  gateway.yaml  httproute.yaml  k8sgpt.yaml  localai-deployment.yaml  localai-pvc.yaml  localai-service.yaml  models-configmap.yaml  pvc.yaml  service.yaml  storage-class.yaml
helm-chart/templates/tests/: test-connection.yaml
helm-chart/values/: localai-values.yaml  temp-values.yaml
k8s/: dashboard-admin.yaml  deployment.yaml  ingress.yaml  service.yaml
licenses/: LICENSES.md  MODEL-LICENSES.md
scripts/: health_check.zsh
src/: main.rs
